dropdown css fix

--- a/socialmedia/static/css/project.css
+++ b/socialmedia/static/css/project.css
@@ -14,7 +14,7 @@
 
 #searchResultsDropdown {
   position: absolute;
-  top: calc(100% + 5px);
+  top: 100%;
   left: 0;
   right: 0;
   z-index: 1000;
