--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -152,23 +152,28 @@
                 <button type="submit" class="btn btn-primary">Create Post</button>
               </form>
               {% for post, comments, last_liked_user in posts_with_comments %}
-                <div class="post mt-4 p-3 bg-light rounded">
-                  <div class="d-flex align-items-center">
-                    {% if post.user.profile.profile_image %}
-                      <img src="{{ post.user.profile.profile_image.url }}"
-                           class="rounded-circle"
-                           height="40"
-                           alt="User Avatar" />
-                    {% else %}
-                      <img src="https://via.placeholder.com/150"
-                           class="rounded-circle"
-                           height="40"
-                           alt="User Avatar" />
+                <div class="post mt-4 p-3 bg-light rounded" id="post-{{ post.id }}">
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="d-flex align-items-center">
+                      {% if post.user.profile.profile_image %}
+                        <img src="{{ post.user.profile.profile_image.url }}"
+                             class="rounded-circle"
+                             height="40"
+                             alt="User Avatar" />
+                      {% else %}
+                        <img src="https://via.placeholder.com/150"
+                             class="rounded-circle"
+                             height="40"
+                             alt="User Avatar" />
+                      {% endif %}
+                      <strong class="ml-2">
+                        <a href="{% url 'social:my_profile' post.user.username %}"
+                           class="text-dark">{{ post.user.username }}</a>
+                      </strong>
+                    </div>
+                    {% if post.user == user %}
+                      <button class="btn btn-danger delete-post" data-post-id="{{ post.id }}">Delete</button>
                     {% endif %}
-                    <strong class="ml-2">
-                      <a href="{% url 'social:my_profile' post.user.username %}"
-                         class="text-dark">{{ post.user.username }}</a>
-                    </strong>
                   </div>
                   <div class="mt-3">
                     {% if post.image %}
