--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -108,22 +108,33 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-8">
-          <div class="post-content bg-white p-4 rounded shadow-sm">
+          <div class="post-content bg-white p-4 rounded">
             <div class="post mb-4">
               <div class="d-flex align-items-center mb-3">
-                <img src="{{ post_detail.user.profile.profile_image.url }}"
-                     class="rounded-circle"
-                     height="40"
-                     alt="User Avatar" />
-                <strong class="ml-2">{{ post_detail.user.username }}</strong>
+                {% if post_detail.user.profile.profile_image %}
+                  <img src="{{ post_detail.user.profile.profile_image.url }}"
+                       class="rounded-circle"
+                       height="40"
+                       alt="User Avatar" />
+                {% else %}
+                  <img src="https://via.placeholder.com/150"
+                       class="rounded-circle"
+                       height="40"
+                       alt="User Avatar" />
+                {% endif %}
+                <strong class="ml-2">
+                  <a href="{% url 'social:my_profile' post_detail.user.username %}"
+                     class="text-dark">{{ post_detail.user.username }}</a>
+                </strong>
               </div>
+              <p>{{ post_detail.text }}</p>
               {% if post_detail.image %}
                 <img src="{{ post_detail.image.url }}"
-                     alt="Post Image"
-                     class="img-fluid post-image" />
+                     class="img-fluid mt-3"
+                     alt="Post Image" />
               {% endif %}
               {% if post_detail.video %}
-                <video controls class="img-fluid mt-3 post-image">
+                <video controls class="img-fluid mt-3">
                   <source src="{{ post_detail.video.url }}" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
@@ -135,38 +146,55 @@
                         frameborder="0"
                         allowfullscreen></iframe>
               {% endif %}
-              <div class="details mt-3">
-                <p class="mt-3">{{ post_detail.text }}</p>
-                <div class="d-flex justify-content-between mt-2">
-                  <small class="text-muted">
-                    Liked by <strong id="last-liked-{{ post_detail.id }}">{{ last_liked_user }}</strong> and <strong id="likes-count-{{ post_detail.id }}">{{ post_detail.likes.count }}</strong> others
-                  </small>
-                </div>
-              </div>
             </div>
-            <div class="comments mt-2">
+            <div class="d-flex justify-content-between mt-2">
+              <div>
+                <button class="btn btn-light like-btn" data-post-id="{{ post_detail.id }}">
+                  <i class="far fa-thumbs-up"></i> Like
+                </button>
+                <a href="#comments-section" class="btn btn-light text-dark ml-2">
+                  <i class="far fa-comment"></i> Comment
+                </a>
+              </div>
+              <small class="text-muted">
+                Liked by <strong id="last-liked-{{ post_detail.id }}">{{ last_liked_user }}</strong> and <strong id="likes-count-{{ post_detail.id }}">{{ post_detail.likes.count }}</strong> others
+              </small>
+            </div>
+            <div id="comments-section" class="mt-3">
               {% for comment in comments %}
                 <div class="comment mb-2 d-flex">
-                  <img src="{{ comment.user.profile.profile_image.url }}"
-                       alt="Profile Picture"
-                       class="rounded-circle comment-img" />
+                  {% if comment.user.profile.profile_image %}
+                    <img src="{{ comment.user.profile.profile_image.url }}"
+                         alt="Profile Picture"
+                         class="rounded-circle comment-img"
+                         height="30" />
+                  {% else %}
+                    <img src="https://via.placeholder.com/150"
+                         alt="Profile Picture"
+                         class="rounded-circle comment-img"
+                         height="30" />
+                  {% endif %}
                   <div class="comment-details ml-2">
                     <p class="mb-1">
-                      <strong>{{ comment.user.username }}</strong> {{ comment.text }}
+                      <strong><a href="{% url 'social:my_profile' comment.user.username %}"
+   class="text-dark">{{ comment.user.username }}</a></strong> {{ comment.text }}
                     </p>
                     <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
                   </div>
                 </div>
               {% endfor %}
-              <form method="post" class="mt-3 comment-form">
+              <form method="post"
+                    action="{% url 'social:detail' post_detail.id %}"
+                    class="comment-form mt-2">
                 {% csrf_token %}
-                <div class="d-flex">
-                  <input type="text"
-                         name="text"
-                         class="form-control"
-                         placeholder="Leave a comment" />
-                  <button type="submit" class="btn btn-primary ml-2">Post</button>
-                </div>
+                {{ comment_form.non_field_errors }}
+                <input type="text"
+                       name="text"
+                       class="form-control"
+                       placeholder="Leave a comment"
+                       value="{{ comment_form.text.value|default_if_none:'' }}" />
+                {% if comment_form.text.errors %}<div class="text-danger">{{ comment_form.text.errors }}</div>{% endif %}
+                <button type="submit" class="btn btn-info ml-2">Post</button>
               </form>
             </div>
           </div>
