--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -18,6 +18,9 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" />
     <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
     <title>Post Detail - Social Media App</title>
+    <script>
+      var current_user = "{{ user.username }}";
+    </script>
   </head>
   <body>
     {% cms_toolbar %}
@@ -172,7 +175,7 @@
             </div>
             <div id="comments-section" class="mt-3">
               {% for comment in comments %}
-                <div class="comment mb-2 d-flex">
+                <div class="comment mb-2 d-flex" id="comment-{{ comment.id }}">
                   {% if comment.user.profile.profile_image %}
                     <img src="{{ comment.user.profile.profile_image.url }}"
                          alt="Profile Picture"
@@ -190,6 +193,10 @@
    class="text-dark">{{ comment.user.username }}</a></strong> {{ comment.text }}
                     </p>
                     <small class="text-muted">{{ comment.created|date:"M d, Y" }}</small>
+                    {% if comment.user == request.user %}
+                      <button class="btn btn-danger btn-sm delete-comment"
+                              data-comment-id="{{ comment.id }}">Delete</button>
+                    {% endif %}
                   </div>
                 </div>
               {% endfor %}
