--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -162,7 +162,7 @@
             </div>
             <div class="d-flex justify-content-between mt-2">
               <div>
-                <button class="btn btn-light like-btn {% if request.user in post_detail.likes.all %}liked{% endif %}"
+                <button class="btn btn-light like-btn like_details {% if request.user in post_detail.likes.all %}liked{% endif %}"
                         data-post-id="{{ post_detail.id }}">
                   <i class="far fa-thumbs-up"></i> Like
                 </button>
