--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -200,7 +200,7 @@
                     <p class="mt-3">{{ post.text }}</p>
                     <div class="d-flex justify-content-between mt-2">
                       <div>
-                        <button class="btn btn-light like-btn {% if request.user in post.likes.all %}liked{% endif %}"
+                        <button class="btn btn-light like-btn like_profile {% if request.user in post.likes.all %}liked{% endif %}"
                                 data-post-id="{{ post.id }}">
                           <i class="far fa-thumbs-up"></i> Like
                         </button>
