--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -121,7 +121,7 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-8">
-          <div class="post-content bg-white p-4 rounded">
+          <div class="post-content bg-light p-4 rounded">
             <div class="post mb-4">
               <div class="d-flex align-items-center mb-3">
                 {% if post_detail.user.profile.profile_image %}
@@ -140,7 +140,6 @@
                      class="text-dark">{{ post_detail.user.username }}</a>
                 </strong>
               </div>
-              <p>{{ post_detail.text }}</p>
               {% if post_detail.image %}
                 <img src="{{ post_detail.image.url }}"
                      class="img-fluid mt-3"
@@ -159,10 +158,11 @@
                         frameborder="0"
                         allowfullscreen></iframe>
               {% endif %}
+              <p class="mt-3">{{ post_detail.text }}</p>
             </div>
             <div class="d-flex justify-content-between mt-2">
               <div>
-                <button class="btn btn-light like-btn like_details {% if request.user in post_detail.likes.all %}liked{% endif %}"
+                <button class="btn btn-light like-btn {% if request.user in post_detail.likes.all %}liked{% endif %}"
                         data-post-id="{{ post_detail.id }}">
                   <i class="far fa-thumbs-up"></i> Like
                 </button>
