Name change and logo

--- a/socialmedia/templates/pages/about.html
+++ b/socialmedia/templates/pages/about.html
@@ -20,14 +20,14 @@
           crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <title>About Us - SocialMediaApp</title>
+    <title>About Us - FollowSphere</title>
   </head>
   <body>
     {% cms_toolbar %}
     {% render_block "js" %}
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
-      <a class="navbar-brand" href="{% url 'home' %}">SocialMediaApp</a>
+      <a class="navbar-brand" href="{% url 'home' %}">FollowSphere</a>
       <button class="navbar-toggler"
               type="button"
               data-toggle="collapse"
@@ -47,7 +47,7 @@
     <div class="container my-5">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="display-4">About SocialMediaApp</h1>
+          <h1 class="display-4">About FollowSphere</h1>
           <p class="lead">Connecting People. Building Communities.</p>
         </div>
       </div>
@@ -122,10 +122,8 @@
         <div class="container text-center text-md-start mt-5">
           <div class="row mt-3">
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">SocialMediaApp</h6>
-              <p>
-                Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
+              <h6 class="text-uppercase fw-bold mb-4">FollowSphere</h6>
+              <p>Helps and service</p>
             </div>
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
               <h6 class="text-uppercase fw-bold mb-4">Company</h6>
