--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -20,14 +20,14 @@
           crossorigin="anonymous" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <title>Social Media</title>
+    <title>FollowSphere</title>
   </head>
   <body>
     {% cms_toolbar %}
     {% render_block "js" %}
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
-      <a class="navbar-brand" href="{% url 'home' %}">SocialMediaApp</a>
+      <a class="navbar-brand" href="{% url 'home' %}">FollowSphere</a>
       <button class="navbar-toggler"
               type="button"
               data-toggle="collapse"
@@ -47,7 +47,7 @@
     <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="display-4">Welcome to SocialMediaApp</h1>
+          <h1 class="display-4">Welcome to FollowSphere</h1>
           <p class="lead">
             Our app allows people to create, share or exchange information, ideas, and pictures/videos in virtual communities and networks.
           </p>
@@ -87,54 +87,6 @@
           <a href="" class="me-4 text-reset">
             <i class="fab fa-github"></i>
           </a>
-        </div>
-      </section>
-      <section>
-        <div class="container text-center text-md-start mt-5">
-          <div class="row mt-3">
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">SocialMediaApp</h6>
-              <p>
-                Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </p>
-            </div>
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">Company</h6>
-              <p>
-                <a href="#!" class="text-reset">How it works</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Pricing</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Docs</a>
-              </p>
-            </div>
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">Resources</h6>
-              <p>
-                <a href="#!" class="text-reset">Blog post name list goes here</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Blog post name list goes here</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Blog post name list goes here</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">See all resources ></a>
-              </p>
-            </div>
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <h6 class="text-uppercase fw-bold mb-4">About</h6>
-              <p>
-                <a href="#!" class="text-reset">Terms & Conditions</a>
-              </p>
-              <p>
-                <a href="#!" class="text-reset">Privacy policy</a>
-              </p>
-            </div>
-          </div>
         </div>
       </section>
       <div class="text-center p-4 footer-bg">
