--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -133,7 +133,8 @@
       <div class="container my-5">
         <div class="row">
           <div class="col-lg-8">
-            <div class="profile-content bg-white p-4 rounded shadow-sm profile-posts">
+            <div class="profile-content bg-white p-4 rounded shadow-sm profile-posts"
+                 data-user-id="{{ user.id }}">
               <form id="postForm" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ post_form.non_field_errors }}
@@ -179,18 +180,46 @@
                            class="text-dark">{{ post.user.username }}</a>
                       </strong>
                     </div>
-                    {% if post.user == user %}
-                      <button class="btn btn-danger delete-post" data-post-id="{{ post.id }}">Delete</button>
-                    {% endif %}
+                    <div class="dropdown">
+                      <div class="three-dots"
+                           id="postOptions-{{ post.id }}"
+                           data-bs-toggle="dropdown"
+                           aria-expanded="false"></div>
+                      <ul class="dropdown-menu" aria-labelledby="postOptions-{{ post.id }}">
+                        {% if post.user == user %}
+                          <li>
+                            <a class="dropdown-item edit-post" href="#" data-post-id="{{ post.id }}">Edit Post</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item toggle-comments"
+                               href="#"
+                               data-post-id="{{ post.id }}">
+                              {% if post.comments_disabled %}
+                                Enable Comments
+                              {% else %}
+                                Disable Comments
+                              {% endif %}
+                            </a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item delete-post"
+                               href="#"
+                               data-post-id="{{ post.id }}">Delete</a>
+                          </li>
+                        {% endif %}
+                      </ul>
+                    </div>
                   </div>
                   <div class="mt-3">
                     {% if post.image %}
                       <a href="{% url 'social:detail' post.id %}">
-                        <img src="{{ post.image.url }}" alt="Post Image" class="img-fluid" />
+                        <img src="{{ post.image.url }}"
+                             alt="Post Image"
+                             class="img-fluid post-image" />
                       </a>
                     {% endif %}
                     {% if post.video %}
-                      <video controls class="img-fluid mt-3">
+                      <video controls class="img-fluid mt-3 post-video">
                         <source src="{{ post.video.url }}" type="video/mp4" />
                         Your browser does not support the video tag.
                       </video>
@@ -200,9 +229,10 @@
                               height="315"
                               src="https://www.youtube.com/embed/{{ post.youtube_link|youtube_id }}"
                               frameborder="0"
-                              allowfullscreen></iframe>
+                              allowfullscreen
+                              class="post-youtube-link"></iframe>
                     {% endif %}
-                    <p class="mt-3">{{ post.text }}</p>
+                    <p class="mt-3 post-text">{{ post.text }}</p>
                     <div class="d-flex justify-content-between mt-2">
                       <div>
                         <button class="btn btn-light like-btn {% if request.user in post.likes.all %}liked{% endif %}"
@@ -218,9 +248,11 @@
                         Liked by <strong id="last-liked-{{ post.id }}">{{ last_liked_user }}</strong> and <strong id="likes-count-{{ post.id }}">{{ post.likes.count }}</strong> others
                       </small>
                     </div>
-                    <div id="comments-{{ post.id }}" class="comments mt-3">
+                    <div id="comments-{{ post.id }}"
+                         class="comments mt-3"
+                         {% if post.comments_disabled %}style="display: none;"{% endif %}>
                       {% for comment in comments %}
-                        <div class="comment mb-2 d-flex">
+                        <div class="comment mb-2 d-flex" id="comment-{{ comment.id }}">
                           {% if comment.user.profile.profile_image %}
                             <img src="{{ comment.user.profile.profile_image.url }}"
                                  alt="Profile Picture"
@@ -245,7 +277,8 @@
                       {% endfor %}
                       <form method="post"
                             action="{% url 'social:detail' post.id %}"
-                            class="comment-form mt-2">
+                            class="comment-form mt-2"
+                            {% if post.comments_disabled %}style="display: none;"{% endif %}>
                         {% csrf_token %}
                         {{ comment_form.non_field_errors }}
                         <input type="text"
@@ -260,6 +293,19 @@
                   </div>
                 </div>
               {% endfor %}
+              <div class="pagination">
+                <span class="step-links">
+                  {% if page_obj.has_previous %}
+                    <a href="?page=1">« first</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                  {% endif %}
+                  <span class="current">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+                  {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">last »</a>
+                  {% endif %}
+                </span>
+              </div>
             </div>
           </div>
           <div class="col-md-2 d-md-none d-lg-block">
@@ -333,6 +379,49 @@
         </div>
       </div>
     </main>
+    <!-- Edit Post Modal -->
+    <div class="modal fade"
+         id="editPostModal"
+         tabindex="-1"
+         aria-labelledby="editPostModalLabel"
+         aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editPostModalLabel">Edit Post</h5>
+            <button type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="editPostForm">
+              <input type="hidden" name="post_id" id="editPostId" />
+              <div class="mb-3">
+                <label for="editPostText" class="form-label">Text</label>
+                <textarea class="form-control" id="editPostText" name="text" rows="3" required></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="editPostImage" class="form-label">Image</label>
+                <input type="file" class="form-control" id="editPostImage" name="image" />
+              </div>
+              <div class="mb-3">
+                <label for="editPostVideo" class="form-label">Video</label>
+                <input type="file" class="form-control" id="editPostVideo" name="video" />
+              </div>
+              <div class="mb-3">
+                <label for="editPostYoutubeLink" class="form-label">YouTube Link</label>
+                <input type="url"
+                       class="form-control"
+                       id="editPostYoutubeLink"
+                       name="youtube_link" />
+              </div>
+              <button type="submit" class="btn btn-primary">Save changes</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id="customAlert" class="custom-alert">
       <span id="alertMessage"></span>
       <button onclick="document.getElementById('customAlert').style.display='none'">OK</button>
@@ -340,6 +429,7 @@
     <!-- MDB -->
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'js/project.js' %}"></script>
   </body>
 </html>
