--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -115,6 +115,15 @@
                       </li>
                     </ul>
                   </li>
+                  <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="#" id="notifications-icon">
+                      <i class="fas fa-bell text-dark"></i>
+                    </a>
+                    <div id="notifications-panel" class="dropdown-menu">
+                      <h6 class="dropdown-header">Notifications</h6>
+                      <div id="notifications-content"></div>
+                    </div>
+                  </li>
                 </ul>
               </div>
             </div>
