--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -47,7 +47,8 @@
                        alt="Profile Picture"
                        height="30"
                        class="me-2" />
-                FollowSphere</a>
+                  FollowSphere
+                </a>
               </div>
               <div class="col-md-4">
                 <form class="d-flex input-group w-auto"
@@ -121,6 +122,15 @@
                         <a class="dropdown-item" href="{% url 'social:logout' %}">Logout</a>
                       </li>
                     </ul>
+                  </li>
+                  <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="#" id="notifications-icon">
+                      <i class="fas fa-bell text-dark"></i>
+                    </a>
+                    <div id="notifications-panel" class="dropdown-menu">
+                      <h6 class="dropdown-header">Notifications</h6>
+                      <div id="notifications-content"></div>
+                    </div>
                   </li>
                 </ul>
               </div>
