--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -80,6 +80,18 @@
                       <i class="fas fa-comment text-dark"></i>
                     </a>
                   </li>
+                  <li class="nav-item me-3 me-lg-0">
+                    <a class="nav-link" href="#" id="notifications-icon">
+                      <i class="fas fa-bell text-dark"></i>
+                    </a>
+                    <div id="notifications-panel" class="dropdown-menu">
+                      <h6 class="dropdown-header">Notifications</h6>
+                      <div id="notifications-content"></div>
+                      <div class="dropdown-footer">
+                        <span class="text-primary" id="deleteNotificationsBtn">Delete notifications</span>
+                      </div>
+                    </div>
+                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle d-flex align-items-center"
                        href="#"
@@ -114,15 +126,6 @@
                         <a class="dropdown-item" href="{% url 'social:logout' %}">Logout</a>
                       </li>
                     </ul>
-                  </li>
-                  <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#" id="notifications-icon">
-                      <i class="fas fa-bell text-dark"></i>
-                    </a>
-                    <div id="notifications-panel" class="dropdown-menu">
-                      <h6 class="dropdown-header">Notifications</h6>
-                      <div id="notifications-content"></div>
-                    </div>
                   </li>
                 </ul>
               </div>
