--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -93,11 +93,11 @@
                       <i class="fas fa-bell text-dark"></i>
                     </a>
                     <div id="notifications-panel" class="dropdown-menu">
-                      <h6 class="dropdown-header">Notifications</h6>
-                      <div id="notifications-content"></div>
-                      <div class="dropdown-footer">
-                        <span class="text-primary" id="deleteNotificationsBtn">Delete notifications</span>
+                      <div class="d-flex justify-content-between align-items-center">
+                        <h6 class="dropdown-header mb-0">Notifications</h6>
+                        <span id="clear-notifications" class="text-muted">Clear all</span>
                       </div>
+                      <div id="notifications-content"></div>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
