--- a/socialmedia/static/css/profile.css
+++ b/socialmedia/static/css/profile.css
@@ -228,3 +228,52 @@ body {
 .notification img {
     margin-right: 10px;
 }
+
+.notification .follow-btn {
+    margin-left: 10px;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+.notification .btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+    color: #fff;
+}
+
+.notification .btn-secondary {
+    background-color: #6c757d;
+    border-color: #6c757d;
+    color: #fff;
+}
+
+.notification .btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #004085;
+}
+
+.notification .btn-secondary:hover {
+    background-color: #5a6268;
+    border-color: #545b62;
+}
+
+.notification p {
+    margin: 0;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.notification p strong {
+    margin-right: 5px;
+}
+
+.notification .ml-2 {
+    margin-left: 10px;
+}
+
+.notification .follow-text {
+    margin-left: 10px;
+}
