--- a/socialmedia/templates/pages/profile.html
+++ b/socialmedia/templates/pages/profile.html
@@ -43,7 +43,7 @@
               <div class="col-md-1"></div>
               <div class="col-md-2">
                 <a class="navbar-brand" href="{% url 'social:index' %}">
-                  <img src="{% static 'images/Logo.png' %}"
+                  <img src="{% static 'images/logo.png' %}"
                        alt="Profile Picture"
                        height="30"
                        class="me-2" />
